# xdBot

./: CMakeLists.txt  README.md  about.md  build_explain.txt  build_output.txt  changelog.md  index.html  mod.json  ninja_explain.txt  support.md
.github/workflows/: multi-platform.yml
assets/: main.js  styles.css
build - Copy/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  what.txt  xdBot2.sln  xdBot2.vcxproj  xdBot2.vcxproj.filters  xdBot2_PACKAGE.vcxproj  xdBot2_PACKAGE.vcxproj.filters
build - Copy/bindings/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GeodeBindings.sln  GeodeBindings.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters
build - Copy/bindings/GeodeBindings.dir/RelWithDebInfo/GeodeBindings.tlog/: CustomBuild.read.1.tlog
build - Copy/bindings/bindings/Geode/: CodegenData.json
build - Copy/geode/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  geode-sdk.sln
build - Copy/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  what.txt  xdBot2.sln  xdBot2.vcxproj  xdBot2.vcxproj.filters  xdBot2_PACKAGE.vcxproj  xdBot2_PACKAGE.vcxproj.filters
build1/bindings/: GeodeBindings.vcxproj  cmake_install.cmake
build1/bindings/GeodeBindings.dir/RelWithDebInfo/GeodeBindings.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  GeodeBindings.lastbuildstate
build1/geode/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build1/geode-deps/geode.custom-keybinds/include/: Keybinds.hpp
build1/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
build1/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  what.txt
build2/bindings/: cmake_install.cmake
build2/bindings/bindings/Geode/: CodegenData.json
build2/geode/: cmake_install.cmake
scripts/: build-android.ps1  build.ps1  install-dependencies.ps1  setup-new-device.ps1  start-auth-web.ps1
src/: global.cpp  includes.hpp  keybinds.cpp  macro.cpp  macro.hpp  main.cpp
src/gdr/: gdr.hpp
src/hacks/: clickbot.cpp  clickbot.hpp  coin_finder.hpp  other.cpp  tps_bypass.cpp
src/practice_fixes/: player.cpp  practice_fixes.hpp
src/renderer/: renderer.cpp
src/renderer/ffmpeg/: events.hpp
src/ui/: autoclicker_settings_layer.hpp  autosave_settings_layer.hpp  button_edit_layer.hpp  button_setting.cpp  clickbot_layer.cpp  clickbot_layer.hpp  load_macro_layer.cpp  load_macro_layer.hpp  macro_editor.cpp  macro_editor.hpp  macro_info_layer.hpp  mirror_settings_layer.hpp  noclip_settings_layer.hpp  record_layer.cpp  record_layer.hpp  render_presets_layer.hpp  render_settings_layer.cpp  render_settings_layer.hpp  save_macro_layer.hpp  star_rate_override_layer.hpp  trajectory_settings_layer.hpp
src/utils/: utils.cpp  utils.hpp
